# native-serial

./: .gitattributes  Cargo.toml  LICENSE  README.md  build.js  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
__test__/: index.spec.ts
benchmark/: bench.ts
src/: lib.rs  open_port.rs  ports.rs  types.rs
